[package]
name = "aoc_22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
itertools = "0.11.0"
petgraph = "0.6.4"
uuid = { version = "1.4.1", features = ["v4"] }
